config/envoy-minikube.yml
admin:
  access_log_path: /dev/stdout
  address:
    socket_address: { address: 127.0.0.1, port_value: 9901 }

static_resources:
  listeners:
  - name: egress
    address:
      socket_address: { address: 127.0.0.1, port_value: 1337 }
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          stat_prefix: ingress_http
          codec_type: AUTO
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match: { prefix: "/" }
                route: { cluster: some_service }
          http_filters:
          - name: envoy.router
  clusters:
  - name: some_service
    connect_timeout: 0.25s
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    hosts: [{ socket_address: { address: jokes-grpc, port_value: 50051 }}]
    # This is needed to force an HTTP2 connection
    http2_protocol_options: {}

stats_sinks:
  - name: "envoy.dog_statsd"
    config:
      address:
        socket_address:
          address: 10.108.152.81
          port_value: 8125
